--- a/contatos.css
+++ b/contatos.css
@@ -4,8 +4,15 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    list-style: none;
+    text-decoration: none;
 }
 
+body {
+    font-family: "Maven Pro", sans-serif;
+    background-color: black;
+    color: white;
+}
 
 header {
     height: 90px;
@@ -22,20 +29,18 @@ ul {
     display: flex;
     width: 100%;
     justify-content: space-between;
-
 }
 
 li {
-    list-style: none;
     color: aliceblue;
     cursor: pointer;
     font-size: 19px;
-    transition:0,5s;
     font-family: "Maven Pro", sans-serif;
+    transition: color 0.5s;
 }
 
 li:hover {
-    color:rgb(5,146,146) ;
+    color: rgb(5, 146, 146);
 }
 
 #logo {
@@ -43,25 +48,12 @@ li:hover {
     height: auto;
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400..900&display=swap');
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-body {
-    font-family: "Maven Pro", sans-serif;
-    background: linear-gradient(to bottom, black,  rgb(5,146,146));
-    color: white;
-}
-
 #comment-section {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: calc(100vh - 90px); /* Ajusta altura para considerar o header */
+    padding: 20px;
 }
 
 .comment-box {
@@ -77,18 +69,25 @@ body {
     margin-bottom: 15px;
     text-align: center;
     font-size: 22px;
+    color: white;
 }
 
 textarea {
     width: 100%;
     padding: 15px;
     border-radius: 5px;
-    border: none;
+    border: 1px solid rgba(255, 255, 255, 0.2);
     font-size: 16px;
     resize: none;
     margin-bottom: 15px;
     background-color: #000;
     color: white;
+    transition: border-color 0.3s ease;
+}
+
+textarea:focus {
+    border-color: rgb(5, 146, 146);
+    outline: none;
 }
 
 textarea::placeholder {
@@ -97,9 +96,9 @@ textarea::placeholder {
 
 .button {
     width: 100%;
-    padding: 10px 0;
-    background-color: white;
-    color: black;
+    padding: 15px;
+    background-color: rgb(5, 146, 146);
+    color: white;
     border: none;
     border-radius: 5px;
     font-size: 18px;
@@ -109,10 +108,9 @@ textarea::placeholder {
 }
 
 .button:hover {
-    background-color: rgb(5,146,146);
-    color: white;
+    background-color: white;
+    color: black;
 }
-
 
 footer {
     height: 300px;
@@ -121,29 +119,43 @@ footer {
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
-
+    background-color: #111;
 }
-span{
-    color:#fff ;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
+span {
+    color: #fff;
+    font-family: "Maven Pro", sans-serif;
 }
 
 .footer-nav {
     display: none;
 }
 
-.footer-list{
+.footer-list {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-@media (max-width:768px ){ 
+@media (max-width: 768px) {
+    nav {
+        display: none;
+    }
 
     .footer-nav {
         display: block;
     }
-nav {
-    display: none;
-} 
+
+    #comment-section {
+        padding: 10px;
+    }
+
+    .comment-box {
+        padding: 15px;
+        width: 100%;
+    }
+
+    textarea {
+        padding: 10px;
+    }
 }
