--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ li:hover {
 #trailer-conteiner {
 
     width: 100%;
-    height: 400px;
+    height: 600px;
     display: flex;
     justify-content: center; 
 }
@@ -176,7 +176,7 @@ span{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-footer-nav {
+.footer-nav {
     display: none;
 }
 
@@ -195,7 +195,10 @@ nav {
     display: none;
 }
 #banner {
-    position: 50%;
+    background-position: 50%;
+    background-image:url(logocell.png) ;
+    background-repeat:no-repeat;
+    background-size: 500px;
 }
 
 #trailer-conteiner {
