--- a/style2.css
+++ b/style2.css
@@ -99,3 +99,45 @@ li:hover {
 .banner3 {
     background-image: url(https://i.pinimg.com/originals/45/e4/bc/45e4bc29e871bb231ac773962a8a50e7.jpg);
 }
+footer {
+    height: 300px;
+    margin-top: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+
+}
+span{
+    color:#fff ;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.footer-nav {
+    display: none;
+}
+
+.footer-list{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+@media (max-width:768px ){ 
+
+    .footer-nav {
+        display: block;
+    }
+nav {
+    display: none;
+}
+#banner {
+    background-position: 50%;
+}
+
+.cards-content {
+    grid-template-columns: 1fr;
+    margin-top: 150px;
+}
+
+}
